--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Shakib vaiya</h1>
    I Will Crieat a Github Acaount
    I Love My Work
-   work is veary beutifull
+   my work is veary beutifull
 </body>
 </html>
