--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
    I Love My Work
    my work is veary beutifull
    Iam a expard worker 
+   <input type="email" name="Email">
+   <textarea name="riviow" rows="4" cols="50"></textarea>
+   <input type="submit" value="submit">
 </body>
 </html>
