--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
    <input type="email" name="Email">
    <textarea name="riviow" rows="4" cols="50"></textarea>
    <input type="submit" value="submit">
-   
+   &copy;Shakib
 </body>
 </html>
