--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
   <title>Calculator</title>
   <style>
+    h1 {
+      margin-laft: 40%;
+    }
+    p {
+      font-size:50px;
+      margin-laft: 40%;
+    }
     .calculator {
       width: 350px;
       padding: 5px;
       border-radius: 10px;
       border: 5px solid #000;
+      margin-laft: 40%;
     }
     .calculator input {
       width: 90%;
@@ -30,7 +38,6 @@
     }
     body {
      height: 450px;
-      margin-laft: 30%;
     }
   </style>
 </head>
@@ -45,7 +52,7 @@
     <button onclick="divide()">÷</button>
     <p id="result"></p>
   </div>
-&copy; SAKIB
+  <p>&copy; SAKIB</p>
   <script>
     function add() {
       var num1 = parseFloat(document.getElementById('num1').value);
