--- a/index.html
+++ b/index.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Calculator</title>
+  <title> Calculator</title>
   <style>
-    h1 {
-      margin-laft: 40%;
-    }
-    p {
-      font-size:50px;
-      margin-laft: 40%;
-    }
     .calculator {
-      width: 350px;
+      width: 700px;
+      height: 700px;
+      margin: auto;
       padding: 5px;
-      border-radius: 10px;
-      border: 5px solid #000;
-      margin-laft: 40%;
+      border-radius: 15px;
+      border: 15px solid #000;
     }
     .calculator input {
       width: 90%;
-      height: 50px;
-      margin-bottom: 20px;
-      margin-left: 15px;
-      font-size: 40px;
-      border-radius: 6px;
-      border: 2px solid #000;
+      height: 150px;
+      margin: 20px;
+      font-size: 90px;
+      border-radius: 15px;
+      border: 8px solid #000;
     }
     .calculator button{
-      font-size: 35px;
-      margin-left: 17px;
-      padding: 20px;
-      background-color:#608377;
-      border-radius: 5px;
+      font-size: 90px;
+      margin-left: 20px;
+      padding: 50px;
+      background: hsla(198, 79%, 73%, 1);
+      border-radius: 20%;
+    }
+    .calculator button:Hover {
+      background-color:#5787f6bf;
+    }
+    #result {
+      font-size: 90px;
+    }
+    #result:hover {
+      color:#f42626ee;
+      background:#ecfb35ee;
+      border: 15px dashed #000;
     }
     .calculator p {
       font-size: 60px;
@@ -42,7 +46,6 @@
   </style>
 </head>
 <body>
-    <H1> USE MY CALCULATOR</H1>
   <div class="calculator">
     <input type="text" id="num1" placeholder="Enter a number">
     <input type="text" id="num2" placeholder="Enter a number">
@@ -52,7 +55,7 @@
     <button onclick="divide()">÷</button>
     <p id="result"></p>
   </div>
-  <p>&copy; SAKIB</p>
+
   <script>
     function add() {
       var num1 = parseFloat(document.getElementById('num1').value);
