--- a/index.html
+++ b/index.html
@@ -44,16 +44,19 @@
      height: 450px;
     }
   </style>
+  
 </head>
 <body>
   <div class="calculator">
+    <h1> USE THE CALCULATOR</h1>
     <input type="text" id="num1" placeholder="Enter a number">
     <input type="text" id="num2" placeholder="Enter a number">
     <button onclick="add()">+</button>
     <button onclick="subtract()">-</button>
     <button onclick="multiply()">×</button>
     <button onclick="divide()">÷</button>
-    <p id="result"></p>
+    <p id="result"></p> <br>
+    <h2>&copy; SAKIB S</h2>
   </div>
 
   <script>
