--- a/index.html
+++ b/index.html
@@ -43,11 +43,18 @@
     body {
      height: 450px;
     }
+    h1 {
+      margin: auto;
+    }
+    h3 {
+      margin: auto;
+    }
   </style>
   
 </head>
 <body>
     <h1> USE THE CALCULATOR</h1>
+   <h3><a href="https://websaib.github.io/CalculatorV.1/"> CalculatorV.1 </a></h3>
   <div class="calculator">
     <input type="text" id="num1" placeholder="Enter a number">
     <input type="text" id="num2" placeholder="Enter a number">
