--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <title> Calculator</title>
   <style>
+     .div1 {
+      margin: auto;
+     }
     .calculator {
       width: 700px;
       height: 700px;
@@ -53,8 +56,9 @@
   
 </head>
 <body>
-    <h1> USE THE CALCULATOR</h1>
-   <h3><a href="https://websaib.github.io/CalculatorV.1/"> CalculatorV.1 </a></h3>
+  <div class="div1">
+    <h1><a href="https://websaib.github.io/CalculatorV.1/"> USE THE CALCULATOR </a></h1>
+  </div>
   <div class="calculator">
     <input type="text" id="num1" placeholder="Enter a number">
     <input type="text" id="num2" placeholder="Enter a number">
